--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Sufiyan Sakaria",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "priyansh-ig-downloader": "^2.0.0",
