--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
   "author": "Sufiyan Sakaria",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.7.2",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "priyansh-ig-downloader": "^2.0.0",
-    "ytdl-core": "^4.11.5"
+    "ytdl-core": "^4.11.5",
+    "axios": "^1.4.0"
   }
 }
